fix: alignment fixes

--- a/my-portfolio-website/src/index.css
+++ b/my-portfolio-website/src/index.css
@@ -6,9 +6,8 @@
   font-family: Poppins, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  width: 100%;
   background-color: #171717;
-  width: fit-content;
-  min-width: initial;
   font-synthesis: none;
   margin: auto;
   align-items: center;
